--- a/Rahanubun.html
+++ b/Rahanubun.html
@@ -13,7 +13,14 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Sembunyikan bagian ucapan awalnya */
+        #ucapan {
+            display: none;
+        }
+    </style>
 </head>
+
 <script>
     window.onload = function () {
         // Mengecek apakah URL mengandung #autoplay-music
@@ -21,21 +28,17 @@
             var audio = document.getElementById('background-music');
             audio.play(); // Mulai musik jika hash ada
         }
-    }
 
-    window.onload = function () {
-        if (performance.navigation.type === performance.navigation.TYPE_RELOAD) {
-            Swal.fire({
-                title: 'Halamanan Di Muat Ulang!',
-                text: 'Akan kembali ke halaman awal.',
-                icon: 'warning',
-                confirmButtonText: 'OK'
-            }).then(() => {
-                window.location.href = 'index.html';
-            });
-        }
+        // Event listener untuk tombol tekan
+        const ucapanButton = document.querySelector('.btn-ucapan');
+        ucapanButton.addEventListener('click', function (event) {
+            event.preventDefault(); // Mencegah default action
+            // Tampilkan bagian ucapan dan gulir ke tampilan ucapan
+            const ucapanSection = document.getElementById('ucapan');
+            ucapanSection.style.display = 'block';
+            ucapanSection.scrollIntoView({ behavior: 'smooth' });
+        });
     };
-
 </script>
 
 <body>
@@ -44,9 +47,9 @@
         <source src="natal.mp3" type="audio/mpeg">
         Browser Anda tidak mendukung audio.
     </audio>
+
     <!-- Header -->
     <header id="header" class="header">
-
         <div class="container text-center text-white">
             <img src="header.jpg" alt="">
             <h1 data-aos="fade-down" class="title"><span>Keluarga Johanis Rahanubun</span></h1>
@@ -68,11 +71,10 @@
                         Natal adalah waktu untuk berbagi kebahagiaan, kedamaian, dan kasih sayang.
                         Rayakan momen istimewa ini bersama keluarga dan orang terkasih.
                     </p>
-                    <a href="#ucapan" class="btn btn-danger mt-3">
+                    <a href="#" class="btn btn-danger mt-3 btn-ucapan">
                         <i class="fas fa-gift" style="font-size: 1.5rem; color: white;"></i>
                         Tekan Untuk Ucapan
                     </a>
-
                 </div>
             </div>
         </div>
@@ -108,17 +110,13 @@
             <a href="#header" class="btn btn-light mt-4" data-aos="zoom-in">
                 <i class="fas fa-arrow-up"></i>
             </a>
-
         </div>
-
     </section>
 
     <!-- Footer -->
     <footer class="footer">
         <a href="https://www.instagram.com/f_r_23/" target=""><i class="fab fa-instagram"></i style=color:white>f_r_23</a>
     </footer>
-
-
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
