--- a/index.html
+++ b/index.html
@@ -12,16 +12,38 @@
         body {
             margin: 0;
             padding: 0;
-            height: 100vh;
+            min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f8f9fa;
-            overflow: hidden;
+            background-image: url('heaader.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            position: relative;
+            color: #ffffff;
+        }
+
+        /* Overlay for background */
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); /* Overlay with slight transparency */
+            z-index: 1;
         }
 
         #envelope-icon {
             text-align: center;
+            position: relative;
+            z-index: 2;
+            padding: 20px;
+            border-radius: 15px;
+            background-color: rgba(255, 255, 255, 0.8); /* Semi-transparan kotak */
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Tambahkan bayangan */
         }
 
         #envelope-icon i {
@@ -38,9 +60,7 @@
         }
 
         @keyframes bounce {
-
-            0%,
-            100% {
+            0%, 100% {
                 transform: translateY(0);
             }
 
@@ -53,7 +73,17 @@
             margin-top: 20px;
             font-family: 'Dancing Script', cursive;
             font-size: 1.5rem;
-            color: #6c757d;
+            color: #333333;
+        }
+
+        @media (max-width: 768px) {
+            #envelope-icon i {
+                font-size: 70px;
+            }
+
+            #envelope-icon p {
+                font-size: 1.2rem;
+            }
         }
     </style>
 </head>
@@ -77,7 +107,6 @@
             }, 500); // Tunggu setengah detik sebelum berpindah halaman
         }
     </script>
-
 </body>
 
 </html>
