--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -42,7 +43,7 @@
             z-index: 2;
             padding: 20px;
             border-radius: 15px;
-            background-color: rgba(255, 255, 255, 0.8); /* Semi-transparan kotak */
+            background-color: rgba(255, 255, 255, 0.66); /* Semi-transparan kotak */
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Tambahkan bayangan */
         }
 
@@ -85,13 +86,24 @@
                 font-size: 1.2rem;
             }
         }
+        h1 {
+            font-family: 'Dancing Script', cursive;
+            color: #ffffff;
+        }
+        
     </style>
 </head>
 
 <body>
     <div id="envelope-icon">
+
+        <h1>Ucapan Natal Dari Keluarga
+            <br>
+ 
+            <p class="text-danger fw-bold">Johanis Rahanubun</p>
+        </h1>
         <i class="fas fa-envelope" title="Klik untuk masuk" onclick="navigateToIndex()"></i>
-        <p>Klik ikon surat untuk melanjutkan</p>
+        <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Klik ikon surat untuk melanjutkan</p>
     </div>
 
     <script>
