Pesan commit untuk semua perubahan

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h1>Ucapan Natal Dari Keluarga
             <br>
  
-            <p class="text-danger fw-bold">Johanis Rahanubun</p>
+            <p class="text-danger fw-bold">Bpk Johanis Rahanubun</p>
         </h1>
         <i class="fas fa-envelope" title="Klik untuk masuk" onclick="navigateToIndex()"></i>
         <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Klik ikon surat untuk melanjutkan</p>
