--- a/Rahanubun.html
+++ b/Rahanubun.html
@@ -97,7 +97,31 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6" data-aos="fade-right">
-                    <img src="keluarga.jpg" class="img-fluid rounded shadow" alt="Dekorasi Natal">
+                    <!-- Carousel -->
+                    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="foto2.jpg" class="d-block w-100 rounded shadow" alt="Dekorasi Natal 1">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="keluarga.jpg" class="d-block w-100 rounded shadow" alt="Dekorasi Natal 2">
+                            </div>
+                            <!-- <div class="carousel-item">
+                                <img src="foto3.jpg" class="d-block w-100 rounded shadow" alt="Dekorasi Natal 3">
+                            </div> -->
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                    <!-- End Carousel -->
                 </div>
                 <div class="col-md-6" data-aos="fade-left">
                     <h2>Semangat Natal</h2>
@@ -113,6 +137,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Ucapan Section -->
     <section id="ucapan">
