--- a/Rahanubun.html
+++ b/Rahanubun.html
@@ -98,17 +98,17 @@
             <div class="row align-items-center">
                 <div class="col-md-6" data-aos="fade-right">
                     <!-- Carousel -->
-                    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="foto2.jpg" class="d-block w-100 rounded shadow" alt="Dekorasi Natal 1">
+                                <img src="keluarga.jpg" class="d-block w-100 rounded shadow" alt="Dekorasi Natal 1">
                             </div>
                             <div class="carousel-item">
-                                <img src="keluarga.jpg" class="d-block w-100 rounded shadow" alt="Dekorasi Natal 2">
+                                <img src="foto2.jpg" class="d-block w-100 rounded shadow" alt="Dekorasi Natal 2">
                             </div>
-                            <!-- <div class="carousel-item">
+                            <div class="carousel-item">
                                 <img src="foto3.jpg" class="d-block w-100 rounded shadow" alt="Dekorasi Natal 3">
-                            </div> -->
+                            </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
                             data-bs-slide="prev">
