--- a/Rahanubun.html
+++ b/Rahanubun.html
@@ -5,6 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selamat Natal</title>
+
+    <meta property="og:title" content="Ucapan Natal dari Keluarga Bapak Johanis Rahanubun">
+    <meta property="og:description"
+        content="Selamat Natal 2024! Semoga damai dan sukacita Natal senantiasa menyertai kita semua. Klik untuk melihat ucapan spesial kami!">
+    <meta property="og:image" content="https://ficky230596.github.io/Ucapan_Natal/foto_natal.jpg">
+    <!-- Ganti dengan URL gambar Anda -->
+    <meta property="og:url" content="https://ficky230596.github.io/Ucapan_Natal/index.html">
+    <meta property="og:type" content="website">
+
+
+    <link rel="icon" href="https://ficky230596.github.io/Ucapan_Natal/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Great+Vibes&display=swap"
