--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ucapan Natal</title>
+
+    <meta property="og:title" content="Ucapan Natal dari Keluarga Bapak Johanis Rahanubun">
+    <meta property="og:description"
+        content="Selamat Natal 2024! Semoga damai dan sukacita Natal senantiasa menyertai kita semua. Klik untuk melihat ucapan spesial kami!">
+    <meta property="og:image" content="https://ficky230596.github.io/keluarga.jpg">
+    <!-- Ganti dengan URL gambar Anda -->
+    <meta property="og:url" content="https://ficky230596.github.io/Ucapan_Natal/index.html">
+    <meta property="og:type" content="website">
+
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -33,7 +43,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5); /* Overlay with slight transparency */
+            background: rgba(0, 0, 0, 0.5);
+            /* Overlay with slight transparency */
             z-index: 1;
         }
 
@@ -43,8 +54,10 @@
             z-index: 2;
             padding: 20px;
             border-radius: 15px;
-            background-color: rgba(255, 255, 255, 0.66); /* Semi-transparan kotak */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Tambahkan bayangan */
+            background-color: rgba(255, 255, 255, 0.66);
+            /* Semi-transparan kotak */
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            /* Tambahkan bayangan */
         }
 
         #envelope-icon i {
@@ -61,7 +74,9 @@
         }
 
         @keyframes bounce {
-            0%, 100% {
+
+            0%,
+            100% {
                 transform: translateY(0);
             }
 
@@ -86,11 +101,11 @@
                 font-size: 1.2rem;
             }
         }
+
         h1 {
             font-family: 'Dancing Script', cursive;
             color: #ffffff;
         }
-        
     </style>
 </head>
 
@@ -99,11 +114,12 @@
 
         <h1>Ucapan Natal Dari Keluarga
             <br>
- 
+
             <p class="text-danger fw-bold">Bpk Johanis Rahanubun</p>
         </h1>
         <i class="fas fa-envelope" title="Klik untuk masuk" onclick="navigateToIndex()"></i>
-        <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Klik ikon surat untuk melanjutkan</p>
+        <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Klik ikon surat untuk
+            melanjutkan</p>
     </div>
 
     <script>
