--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Ucapan Natal</title>
 
     <meta property="og:title" content="Ucapan Natal dari Keluarga Bapak Johanis Rahanubun">
-    <meta property="og:description"
-        content="Selamat Natal 2024! Semoga damai dan sukacita Natal senantiasa menyertai kita semua. Klik untuk melihat ucapan spesial kami!">
-    <meta property="og:image" content="https://ficky230596.github.io/keluarga.jpg">
-    <!-- Ganti dengan URL gambar Anda -->
+    <meta property="og:description" content="Selamat Natal 2024! Semoga damai dan sukacita Natal senantiasa menyertai kita semua. Klik untuk melihat ucapan spesial kami!">
+    <meta property="og:image" content="https://ficky230596.github.io/Ucapan_Natal/keluarga.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/jpeg">
     <meta property="og:url" content="https://ficky230596.github.io/Ucapan_Natal/index.html">
     <meta property="og:type" content="website">
+    
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
